--- a/demo/example-uni.html
+++ b/demo/example-uni.html
@@ -1,7 +1,24 @@
-<div class="vclTabs vclTabStyleUni">
-  <ul role="tablist">
-    <li role="tab"><a>Tab 1</a></li>
-    <li role="tab" class="vclSelected"><a>Tab 2</a></li>
-    <li role="tab"><a>Long Tab Label 3</a></li>
-  </ul>
+<div class="vclTabbable">
+  <div class="vclTabs vclTabStyleUni">
+    <ul role="tablist">
+      <li role="tab"><a>Tab 1</a></li>
+      <li role="tab" class="vclSelected"><a>Tab 2</a></li>
+      <li role="tab"><a>Long Tab Label 3</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="vclTabbable">
+  <div class="vclTabs vclTabStyleUni">
+    <ul role="tablist">
+      <li role="tab"><a href="#vclArticleNavi_Tabs">Tab 1</a></li>
+      <li role="tab" class="vclSelected"><a href="#vclArticleNavi_Tabs">Tab 2</a></li>
+      <li role="tab"><a href="#vclArticleNavi_Tabs">Tab 3</a></li>
+    </ul>
+  </div>
+  <div class="vclTabContent">
+    <div role="tabpanel" class="vclTabPanel">
+      <p>I'm content of tab #2.</p>
+    </div>
+  </div>
 </div>
