--- a/demo/example-uni-right.html
+++ b/demo/example-uni-right.html
@@ -1,9 +1,9 @@
 <div class="vclTabbable vclTabsRight">
   <div class="vclTabs vclTabStyleUni vclTabsRight vclSpan-30p">
     <ul role="tablist">
-      <li role="tab"><a href="#vclArticleNavi_Tabs">Tab 1</a></li>
-      <li role="tab" class="vclSelected"><a href="#vclArticleNavi_Tabs">Tab 2</a></li>
-      <li role="tab"><a href="#vclArticleNavi_Tabs">Long Tab Label 3</a></li>
+      <li role="tab"><a href="#">Tab 1</a></li>
+      <li role="tab" class="vclSelected"><a href="#">Tab 2</a></li>
+      <li role="tab"><a href="#">Long Tab Label 3</a></li>
     </ul>
   </div>
   <div class="vclTabContent vclSpan-70p">
