--- a/demo/example.html
+++ b/demo/example.html
@@ -1,67 +1,18 @@
-<div class="vclTabbable">
-  <div class="vclTabs">
-    <ul role="tablist">
-      <li role="tab">
-        <a href="#">Tab 1
-          <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-      <li role="tab" class="vclSelected">
-        <a href="#">Tab 2
-          <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-      <li role="tab">
-        <a href="#">Tab 3
-          <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-      <li role="tab">
-        <div></div>
-        <a href="#vclArticleNavi_Tabs" class="vclButtonStd vclTransparent vclSquare">
-          <i class="fa fa-plus"></i>
-        </a>
-      </li>
-    </ul>
-  </div>
-</div>
+<link rel="import" href="example-basic.html">
+<link rel="import" href="example-uni.html">
+<link rel="import" href="example-left.html">
+<link rel="import" href="example-uni-left.html">
+<link rel="import" href="example-right.html">
+<link rel="import" href="example-uni-right.html">
 
-<div class="vclTabbable">
-  <div class="vclTabs vclTabBorder">
-    <ul role="tablist">
-      <li role="tab">
-        <a href="#">Tab 1
-          <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-      <li role="tab" class="vclSelected">
-        <a href="#">Tab 2
-          <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-      <li role="tab">
-        <a href="#">Tab 3
-          <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-      <li role="tab">
-        <div></div>
-        <a href="#vclArticleNavi_Tabs" class="vclButtonStd vclTransparent vclSquare">
-          <i class="fa fa-plus"></i>
-        </a>
-      </li>
-    </ul>
-  </div>
-</div>
+<script>
+var nl = document.querySelectorAll('link[rel="import"]');
+
+for (var i = 0; i < nl.length; ++i) {
+  var node = nl[i];
+  var content = node.import.querySelector('body')
+  document.body.appendChild(content.cloneNode(true));
+  document.body.appendChild(document.createElement('br'));
+  document.body.appendChild(document.createElement('br'));
+}
+</script>
