--- a/demo/example-basic.html
+++ b/demo/example-basic.html
@@ -10,7 +10,7 @@
           </button>
         </a>
       </li>
-      <li role="tab" class="vclSelected">
+      <li role="tab" aria-selected="true" class="vclSelected">
         <a href="#">Tab 2
           <button class="vclButtonStd vclTransparent vclSquare">
             <i class="fa fa-times-circle"></i>
