--- a/demo/example-uni-left.html
+++ b/demo/example-uni-left.html
@@ -2,7 +2,7 @@
   <div class="vclTabs vclTabStyleUni vclSpan-30p">
     <ul role="tablist">
       <li role="tab"><a href="#">Tab 1</a></li>
-      <li role="tab" class="vclSelected"><a href="#">Tab 2</a></li>
+      <li role="tab" aria-selected="true" class="vclSelected"><a href="#">Tab 2</a></li>
       <li role="tab"><a href="#">Tab Label 3</a></li>
     </ul>
   </div>
