--- a/demo/example-uni.html
+++ b/demo/example-uni.html
@@ -2,7 +2,7 @@
   <div class="vclTabs vclTabStyleUni">
     <ul role="tablist">
       <li role="tab"><a>Tab 1</a></li>
-      <li role="tab" class="vclSelected"><a>Tab 2</a></li>
+      <li role="tab" aria-selected="true" class="vclSelected"><a>Tab 2</a></li>
       <li role="tab"><a>Long Tab Label 3</a></li>
     </ul>
   </div>
