--- a/demo/example-right.html
+++ b/demo/example-right.html
@@ -1,5 +1,5 @@
 <div class="vclTabbable vclTabsRight">
-  <div class="vclTabs vclTabBorder vclTabsRight vclSpan-30p">
+  <div class="vclTabs vclTabsRight vclSpan-30p">
     <ul role="tablist">
       <li role="tab">
         <a href="#">Tab 1
