minor example fix

--- a/demo/example-basic.html
+++ b/demo/example-basic.html
@@ -5,27 +5,27 @@
     <li role="tab">
       <a href="#">Tab 1
         <button class="vclButtonStd vclTransparent vclSquare">
-          <i class="fa fa-times-circle"></i>
+          <i class="vclIcon fa fa-times-circle"></i>
         </button>
       </a>
     </li>
     <li role="tab" aria-selected="true" class="vclSelected">
       <a href="#">Tab 2
         <button class="vclButtonStd vclTransparent vclSquare">
-          <i class="fa fa-times-circle"></i>
+          <i class="vclIcon fa fa-times-circle"></i>
         </button>
       </a>
     </li>
     <li role="tab">
       <a href="#">Tab 3
         <button class="vclButtonStd vclTransparent vclSquare">
-          <i class="fa fa-times-circle"></i>
+          <i class="vclIcon fa fa-times-circle"></i>
         </button>
       </a>
     </li>
     <li role="tab">
       <a href="#" class="vclButtonStd vclTransparent vclSquare">
-        <i class="fa fa-plus"></i>
+        <i class="vclIcon fa fa-plus"></i>
       </a>
     </li>
   </ul>
