--- a/demo/example-right.html
+++ b/demo/example-right.html
@@ -4,21 +4,21 @@
       <li role="tab">
         <a href="#">Tab 1
           <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
+            <i class="vclIcon fa fa-times-circle"></i>
           </button>
         </a>
       </li>
       <li role="tab" aria-selected="true" class="vclSelected">
         <a href="#">Tab 2
           <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
+            <i class="vclIcon fa fa-times-circle"></i>
           </button>
         </a>
       </li>
       <li role="tab">
         <a href="#">Tab 3
           <button class="vclButtonStd vclTransparent vclSquare">
-            <i class="fa fa-times-circle"></i>
+            <i class="vclIcon fa fa-times-circle"></i>
           </button>
         </a>
       </li>
