Rename vclButtonStd -> vclButton

--- a/demo/example-basic.html
+++ b/demo/example-basic.html
@@ -4,27 +4,27 @@
   <ul role="tablist">
     <li role="tab">
       <a href="#">Tab 1
-        <button class="vclButtonStd vclTransparent vclSquare">
+        <button class="vclButton vclTransparent vclSquare">
           <i class="vclIcon fa fa-times-circle"></i>
         </button>
       </a>
     </li>
     <li role="tab" aria-selected="true" class="vclSelected">
       <a href="#">Tab 2
-        <button class="vclButtonStd vclTransparent vclSquare">
+        <button class="vclButton vclTransparent vclSquare">
           <i class="vclIcon fa fa-times-circle"></i>
         </button>
       </a>
     </li>
     <li role="tab">
       <a href="#">Tab 3
-        <button class="vclButtonStd vclTransparent vclSquare">
+        <button class="vclButton vclTransparent vclSquare">
           <i class="vclIcon fa fa-times-circle"></i>
         </button>
       </a>
     </li>
     <li role="tab">
-      <a href="#" class="vclButtonStd vclTransparent vclSquare">
+      <a href="#" class="vclButton vclTransparent vclSquare">
         <i class="vclIcon fa fa-plus"></i>
       </a>
     </li>
