--- a/demo/example-basic.html
+++ b/demo/example-basic.html
@@ -1,32 +1,24 @@
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 
-<div class="vclTabs">
-  <ul role="tablist">
-    <li role="tab">
-      <a href="#">Tab 1
-        <button class="vclButton vclTransparent vclSquare">
-          <i class="vclIcon fa fa-times-circle"></i>
-        </button>
-      </a>
-    </li>
-    <li role="tab" aria-selected="true" class="vclSelected">
-      <a href="#">Tab 2
-        <button class="vclButton vclTransparent vclSquare">
-          <i class="vclIcon fa fa-times-circle"></i>
-        </button>
-      </a>
-    </li>
-    <li role="tab">
-      <a href="#">Tab 3
-        <button class="vclButton vclTransparent vclSquare">
-          <i class="vclIcon fa fa-times-circle"></i>
-        </button>
-      </a>
-    </li>
-    <li role="tab">
-      <a href="#" class="vclButton vclTransparent vclSquare">
-        <i class="vclIcon fa fa-plus"></i>
-      </a>
-    </li>
-  </ul>
+<div class="vclTabs" role="tablist">
+  <div class="vclTab" role="tab" tabindex="0">
+    <a class="vclTabLabel" href="#">Tab 1</a>
+    <button class="vclButton vclTransparent vclSquare">
+      <span class="vclIcon fa fa-times-circle"></span>
+    </button>
+  </div>
+  <div class="vclTab vclSelected" role="tab" aria-selected="true">
+    <a class="vclTabLabel" href="#">Tab 2</a>
+    <button class="vclButton vclTransparent vclSquare">
+      <span class="vclIcon fa fa-times-circle"></span>
+    </button>
+  </div>
+  <div class="vclTab vclDisabled" role="tab" aria-disabled="true">
+    <span class="vclTabLabel">Disabled Tab 3</span>
+  </div>
+  <div class="vclTab" role="tab">
+    <button class="vclButton vclTransparent vclSquare">
+      <span class="vclIcon fa fa-plus"></span>
+    </button>
+  </div>
 </div>
