--- a/demo/example-right.html
+++ b/demo/example-right.html
@@ -1,32 +1,18 @@
 <div class="vclTabbable vclTabsRight">
-  <div class="vclTabs vclTabsRight vclSpan-30p">
-    <ul role="tablist">
-      <li role="tab">
-        <a href="#">Tab 1
-          <button class="vclButton vclTransparent vclSquare">
-            <i class="vclIcon fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-      <li role="tab" aria-selected="true" class="vclSelected">
-        <a href="#">Tab 2
-          <button class="vclButton vclTransparent vclSquare">
-            <i class="vclIcon fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-      <li role="tab">
-        <a href="#">Tab 3
-          <button class="vclButton vclTransparent vclSquare">
-            <i class="vclIcon fa fa-times-circle"></i>
-          </button>
-        </a>
-      </li>
-    </ul>
+  <div class="vclTabs vclSpan-30p" role="tablist">
+    <div class="vclTab" role="tab" tabindex="0">
+      <a class="vclTabLabel" href="#">Tab 1</a>
+    </div>
+    <div class="vclTab vclSelected" role="tab" aria-selected="true">
+      <span class="vclTabLabel">Tab 2</span>
+    </div>
+    <div class="vclTab" role="tab" tabindex="0">
+      <a class="vclTabLabel" href="#">Tab 3</a>
+    </div>
   </div>
   <div class="vclTabContent vclSpan-70p">
     <div role="tabpanel" class="vclTabPanel">
-      <p>I'm content of tab #2.</p>
+      I'm content of tab #2.
     </div>
   </div>
 </div>
