--- a/demo/example-uni-left.html
+++ b/demo/example-uni-left.html
@@ -1,14 +1,18 @@
 <div class="vclTabbable vclTabsLeft">
-  <div class="vclTabs vclTabStyleUni vclSpan-30p">
-    <ul role="tablist">
-      <li role="tab"><a href="#">Tab 1</a></li>
-      <li role="tab" aria-selected="true" class="vclSelected"><a href="#">Tab 2</a></li>
-      <li role="tab"><a href="#">Tab Label 3</a></li>
-    </ul>
+  <div class="vclTabs vclTabStyleUni vclSpan-30p" role="tablist">
+    <div class="vclTab" role="tab" tabindex="0">
+      <a class="vclTabLabel" href="#">Tab 1</a>
+    </div>
+    <div class="vclTab vclSelected" role="tab" aria-selected="true">
+      <span class="vclTabLabel">Tab 2</span>
+    </div>
+    <div class="vclTab" role="tab" tabindex="0">
+      <a class="vclTabLabel" href="#">Tab Label 3</a>
+    </div>
   </div>
   <div class="vclTabContent vclSpan-70p">
     <div role="tabpanel" class="vclTabPanel">
-      <p>I'm content of tab #2.</p>
+      I'm content of tab #2.
     </div>
   </div>
 </div>
