--- a/demo/example-uni.html
+++ b/demo/example-uni.html
@@ -1,14 +1,21 @@
 <div class="vclTabbable">
-  <div class="vclTabs vclTabStyleUni">
-    <ul role="tablist">
-      <li role="tab"><a>Tab 1</a></li>
-      <li role="tab" aria-selected="true" class="vclSelected"><a>Tab 2</a></li>
-      <li role="tab"><a>Long Tab Label 3</a></li>
-    </ul>
+  <div class="vclTabs vclTabStyleUni" role="tablist">
+    <div class="vclTab" role="tab" tabindex="0">
+      <span class="vclTabLabel">Tab 1</span>
+    </div>
+    <div class="vclTab vclSelected" role="tab" aria-selected="true">
+      <span class="vclTabLabel">Tab 2</span>
+    </div>
+    <div class="vclTab" role="tab" tabindex="0">
+      <span class="vclTabLabel">Long Label of 3</span>
+    </div>
+    <div class="vclTab vclDisabled" role="tab" aria-disabled="true">
+      <span class="vclTabLabel">Disabled Tab 4</span>
+    </div>
   </div>
   <div class="vclTabContent">
     <div role="tabpanel" class="vclTabPanel">
-      <p>I'm content of tab #2.</p>
+      I'm content of tab #2.
     </div>
   </div>
 </div>
