--- a/demo/example-uni-justified.html
+++ b/demo/example-uni-justified.html
@@ -1,5 +1,5 @@
-<div class="vclContainer vclNoBorder vclTabbable">
-  <div class="vclTabs vclTabStyleUni vclNoBorder vclTabNavJustified" role="tablist">
+<div class="vclContainer vclNoBorder vclTabbable vclNoBorder">
+  <div class="vclTabs vclTabStyleUni vclTabNavJustified" role="tablist">
     <div class="vclTab vclSelected" role="tab" aria-selected="true">
       <span class="vclTabLabel">Tab 1</span>
     </div>
