--- a/demo/example-uni-justified.html
+++ b/demo/example-uni-justified.html
@@ -1,4 +1,4 @@
-<div class="vclContainer vclTabbable vclNoBorder">
+<div class="vclTabbable vclViewportBg vclNoBorder" style="padding: 1.5em;">
   <div class="vclTabs vclTabStyleUni vclTabNavJustified" role="tablist">
     <div class="vclTab vclSelected" role="tab" aria-selected="true">
       <span class="vclTabLabel">Tab 1</span>
